--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,59 @@
-# Node dependencies
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Coverage directory
+coverage
+*.lcov
+
+# Dependency directories
 node_modules/
+frontend/node_modules/
+backend/node_modules/
 
-# Environment files
-.env
-frontend/.env
-backend/.env
-
-# Build folders
+# Build outputs
+dist/
+build/
 frontend/build/
 backend/dist/
 
-# Logs
-*.log
+# Optional npm cache directory
+.npm
 
-# Uploads
-backend/uploads/
+# Environment variables
+.env
+.env.local
+.env.*.local
+frontend/.env
+backend/.env
 
-# System files
+# VSCode settings
+.vscode/
+*.code-workspace
+
+# Mac / Windows files
 .DS_Store
 Thumbs.db
+
+# Temporary files
+temp/
+tmp/
+*.tmp
+
+# Logs created by React
+*.tsbuildinfo
+
+# Others
+package-lock.json
+pnpm-lock.yaml
+yarn.lock
